# plugin_Limex

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  REUSE.toml  _formulas.tex  _formulas_dark.tex  annotated.html  aux__output__observer_8hpp_source.html  classes.html  classug_1_1AitkenNevilleTimex-members.html  classug_1_1AitkenNevilleTimex.html  classug_1_1CompositeGridFunctionEstimator-members.html  classug_1_1CompositeGridFunctionEstimator.html  classug_1_1ConnectionViewerOutputObserver-members.html  classug_1_1ConnectionViewerOutputObserver.html  classug_1_1ConstStepLinearTimeIntegrator-members.html  classug_1_1ConstStepLinearTimeIntegrator.html  classug_1_1DeltaSquareIntegrand-members.html  classug_1_1DeltaSquareIntegrand.html  classug_1_1DiscontinuityIntegrator-members.html  classug_1_1DiscontinuityIntegrator.html  classug_1_1GridFunctionEstimator-members.html  classug_1_1GridFunctionEstimator.html  classug_1_1ILimexCostStrategy-members.html  classug_1_1ILimexCostStrategy.html  classug_1_1ILimexRefiner-members.html  classug_1_1ILimexRefiner.html  classug_1_1ILinearTimeIntegrator-members.html  classug_1_1ILinearTimeIntegrator.html  classug_1_1INonlinearTimeIntegrator-members.html  classug_1_1INonlinearTimeIntegrator.html  classug_1_1ISubDiagErrorEst-members.html  classug_1_1ISubDiagErrorEst.html  classug_1_1ITimeDiscDependentObject-members.html  classug_1_1ITimeDiscDependentObject.html  classug_1_1ITimeIntegrator-members.html  classug_1_1ITimeIntegrator.html  classug_1_1IntegrationOutputObserver-members.html  classug_1_1IntegrationOutputObserver.html  (+65 more)
LICENSES/: LicenseRef-UG4-LGPL-3.0.txt
lua/: limex_util.lua  lua-include.lua
sample/conv_diff_app/: conv_diff_limex.lua
sample/richardson_radu/: richardson_radu.lua  richardson_radu.ugx
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  groups_0.js  (+7 more)
tests/: README.md
time_disc/: aux_output_observer.hpp  data_output_observer.hpp  limex_integrator.hpp  linear_implicit_timestep.cpp  linear_implicit_timestep.h  metric_spaces.h  simple_integrator.hpp  simple_integrator_impl.hpp  time_extrapolation.cpp  time_extrapolation.h  time_integrator.hpp  time_integrator_impl.hpp
